Maven import: surefire config, all-open annotations, JVM detection
- Extract surefire argLine and systemPropertyVariables as JVM options
- Extract -javaagent references as jvmAgents (Maven coordinates)
- Extract Kotlin all-open plugin annotations from pluginOptions
- Detect Java release from maven-compiler-plugin, set jvm: temurin:<ver>
- Filter Maven-specific system properties (maven.home, etc.)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>